--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "errorhandler": "~1.0.0",
     "express": "~4.0.0",
     "express-session": "~1.0.2",
+    "http-proxy": "^1.11.2",
     "lodash": "^2.4.2",
     "md5": "^2.0.0",
     "method-override": "~1.0.0",
