--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "elasticsearch": "^4.1.0",
     "email": "^0.2.6",
     "errorhandler": "~1.0.0",
+    "exceljs": "^0.2.3",
     "express": "~4.0.0",
     "express-session": "~1.0.2",
     "http-proxy": "^1.11.2",
