--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "moment": "~2.10.6",
     "underscore": "~1.8.3",
     "fontawesome": "~4.4.0",
-    "SyntaxHighlighter": "~3.0.83"
+    "SyntaxHighlighter": "~3.0.83",
+    "editor": "lepture/editor#~0.1.0"
   }
 }
