--- a/package.json
+++ b/package.json
@@ -31,7 +31,34 @@
     "showdown": "^1.2.0",
     "tracer": "^0.7.4",
     "underscore": "^1.8.3",
-    "weixin-pay": "^1.1.6"
+    "weixin-pay": "^1.1.6",
+    "browser-sync": "^2.6.4",
+    "debug": "^2.2.0",
+    "del": "^1.1.0",
+    "gulp": "^3.8.5",
+    "gulp-autoprefixer": "^2.0.0",
+    "gulp-cache": "0.2.2",
+    "gulp-changed": "^1.0.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-csso": "^1.0.0",
+    "gulp-flatten": "0.0.4",
+    "gulp-if": "^1.2.1",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-jshint": "^1.6.3",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-html": "0.1.5",
+    "gulp-replace": "^0.5.3",
+    "gulp-sass": "^2.0.0",
+    "gulp-size": "^1.0.0",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-uglify": "^1.0.1",
+    "gulp-uncss": "^1.0.0",
+    "gulp-useref": "^1.0.1",
+    "jshint-stylish": "^1.0.0",
+    "opn": "^1.0.0",
+    "psi": "^1.0.4",
+    "socket.io": "^1.3.6",
+    "run-sequence": "^1.0.1"
   },
   "devDependencies": {
     "should": "~3.3.1"
@@ -40,6 +67,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
+    "preinstall": "echo here it comes!",
+    "postinstall": "echo there it goes!",
     "start": "node app.js",
     "test": "grunt test",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
