--- a/package.json
+++ b/package.json
@@ -61,7 +61,11 @@
     "run-sequence": "^1.0.1"
   },
   "devDependencies": {
-    "should": "~3.3.1"
+    "co": "^4.6.0",
+    "should": "~3.3.1",
+    "thunkify": "^2.1.2",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1"
   },
   "engines": {
     "node": ">=0.10.0"
